# xbmc-pvr-addons

./: .gitignore  configure.ac
addons/: Makefile.am
addons/pvr.argustv/project/VS2010Express/: pvr.argustv.vcxproj
addons/pvr.argustv/project/VS2013Express/: pvr.argustv.vcxproj
addons/pvr.argustv/src/: argustvrpc.cpp
addons/pvr.demo/project/VS2010Express/: pvrclient_demo.vcxproj
addons/pvr.demo/project/VS2013Express/: pvrclient_demo.vcxproj
addons/pvr.dvblink/project/VS2010Express/: pvrclient_dvblink.vcxproj
addons/pvr.dvblink/project/VS2013Express/: pvrclient_dvblink.vcxproj
addons/pvr.dvbviewer/addon/: addon.xml  changelog.txt
addons/pvr.dvbviewer/addon/resources/: settings.xml
addons/pvr.dvbviewer/project/VS2010Express/: pvr.dvbviewer.vcxproj
addons/pvr.dvbviewer/project/VS2013Express/: pvr.dvbviewer.vcxproj
addons/pvr.dvbviewer/src/: DvbData.cpp  DvbData.h  client.cpp  client.h
addons/pvr.fortherecord.argus/: Makefile.am
addons/pvr.fortherecord.argus/addon/: addon.xml.in
addons/pvr.fortherecord.argus/project/VS2010Express/: pvr.fortherecord.argus.vcxproj
addons/pvr.fortherecord.argus/src/: client.cpp  fortherecordrpc.cpp  pvrclient-fortherecord.cpp
addons/pvr.hts/project/VS2010Express/: pvrclient_tvheadend.vcxproj
addons/pvr.hts/project/VS2013Express/: pvrclient_tvheadend.vcxproj
addons/pvr.iptvsimple/project/VS2010Express/: pvr.iptvsimple.vcxproj
addons/pvr.iptvsimple/project/VS2013Express/: pvr.iptvsimple.vcxproj
addons/pvr.mediaportal.tvserver/: Makefile.am
addons/pvr.mediaportal.tvserver/addon/: addon.xml  addon.xml.in  changelog.txt
addons/pvr.mediaportal.tvserver/addon/resources/language/English/: strings.po
addons/pvr.mediaportal.tvserver/addon/resources/language/Portuguese (Brazil)/: strings.po
addons/pvr.mediaportal.tvserver/addon/resources/skins/skin.confluence/720p/: DialogRecordSettings.xml
addons/pvr.mediaportal.tvserver/project/VS2010Express/: XBMC_MediaportalTVserver.vcxproj  XBMC_MediaportalTVserver.vcxproj.filters
addons/pvr.mediaportal.tvserver/project/VS2013Express/: XBMC_MediaportalTVserver.vcxproj  XBMC_MediaportalTVserver.vcxproj.filters
addons/pvr.mediaportal.tvserver/src/: Cards.cpp  Cards.h  DateTime.cpp  DateTime.h  GUIDialogRecordSettings.cpp  Socket.cpp  Socket.h  channels.cpp  channels.h  client.cpp  epg.cpp  epg.h  pvrclient-mediaportal.cpp  pvrclient-mediaportal.h  recordings.cpp  recordings.h  timers.cpp  timers.h  utils.cpp  utils.h
addons/pvr.mediaportal.tvserver/src/lib/live555/: LiveMedia555.vcxproj  LiveMedia555.vcxproj.filters
addons/pvr.mediaportal.tvserver/src/lib/live555/BasicUsageEnvironment/: BasicTaskScheduler.cpp
addons/pvr.mediaportal.tvserver/src/lib/live555/groupsock/: Groupsock.cpp  GroupsockHelper.cpp  inet.c
addons/pvr.mediaportal.tvserver/src/lib/live555/liveMedia/: MediaSession.cpp  MultiFramedRTPSource.cpp  RTSPClient.cpp
addons/pvr.mediaportal.tvserver/src/lib/live555/liveMedia/include/: liveMedia.hh
addons/pvr.mediaportal.tvserver/src/lib/tsreader/: DeMultiplexer.cpp  FileReader.cpp  FileReader.h  MemoryBuffer.cpp  MemoryBuffer.h  MemoryReader.cpp  MemoryReader.h  MemorySink.cpp  MemorySink.h  MepoRTSPClient.cpp  MepoRTSPClient.h  MultiFileReader.cpp  MultiFileReader.h  PmtParser.cpp  TSDebug.h  TSHeader.cpp  TSReader.cpp  TSReader.h
addons/pvr.mediaportal.tvserver/src/windows/: FileUtils.cpp
addons/pvr.mythtv.cmyth/project/VS2010Express/: pvr.mythtv.cmyth.vcxproj
addons/pvr.mythtv.cmyth/project/VS2013Express/: pvr.mythtv.cmyth.vcxproj
addons/pvr.mythtv/project/VS2010Express/: pvr.mythtv.vcxproj
addons/pvr.nextpvr/project/VS2010Express/: XBMC_NextPVR.vcxproj
addons/pvr.nextpvr/project/VS2013Express/: XBMC_NextPVR.vcxproj
addons/pvr.njoy/: Makefile.am
addons/pvr.njoy/project/VS2010Express/: pvrclient_njoy.vcxproj
addons/pvr.njoy/project/VS2013Express/: pvrclient_njoy.vcxproj
addons/pvr.vdr.vnsi/project/VS2010Express/: pvrclient_vdr_vnsi.vcxproj  pvrclient_vdr_vnsi.vcxproj.filters
addons/pvr.vdr.vnsi/project/VS2013Express/: pvrclient_vdr_vnsi.vcxproj  pvrclient_vdr_vnsi.vcxproj.filters
addons/pvr.vdr.xvdr/: Makefile.am
addons/pvr.vdr.xvdr/addon/: addon.xml.in
addons/pvr.vdr.xvdr/libxvdr/include/: XVDRCallbacks.h  XVDRSession.h  XVDRThread.h
addons/pvr.vdr.xvdr/libxvdr/include/xvdr/: clientinterface.h  command.h  connection.h  dataset.h  demux.h  msgpacket.h  session.h  thread.h
addons/pvr.vdr.xvdr/libxvdr/src/: XVDRData.cpp  XVDRDemux.cpp  XVDRSession.cpp  avcodec.h  clientinterface.cpp  connection.cpp  dataset.cpp  demux.cpp  iso639.h  msgpacket.cpp  os-config.cpp  os-config.h  session.cpp  thread.cpp
addons/pvr.vdr.xvdr/project/VS2010Express/: pvr.vdr.xvdr.vcxproj  pvr.vdr.xvdr.vcxproj.filters  pvrclient_xvdr.vcxproj  pvrclient_xvdr.vcxproj.filters
addons/pvr.vdr.xvdr/src/: XVDRData.cpp  XVDRSession.cpp  XVDRSession.h  client.cpp  thread.h  tools.cpp
addons/pvr.vdr.xvdr/xvdr/: XBMCAddon.cpp  XBMCAddon.h  XBMCCallbacks.cpp  XBMCChannelScan.cpp  XBMCSettings.cpp
addons/pvr.vuplus/: Makefile.am
addons/pvr.vuplus/project/VS2010Express/: pvr.vuplus.vcxproj
addons/pvr.vuplus/src/: client.cpp
addons/pvr.wmc/: Makefile.am
addons/pvr.wmc/addon/: addon.xml.in
addons/pvr.wmc/src/: DialogRecordPref.cpp  client.cpp  client.h  pvr2wmc.cpp  pvr2wmc.h
lib/cmyth/Win32/: libcmyth.vcxproj  libcmyth_pvr.vcxproj  pvrlib.cmyth.vcxproj  pvrlib.libcmyth.vcxproj  pvrlib.libcmyth.vcxproj.filters
lib/libTcpSocket/: Makefile.am  os-dependent_socket.h
lib/libTcpSocket/linux/: net_posix.c  net_posix.h
lib/libTcpSocket/project/: libTcpSocket_2010.vcxproj  libTcpSocket_2010.vcxproj.filters
lib/libTcpSocket/windows/: net_winsock.c  net_winsock.h
lib/libhts/Win32/: pvrlib.libhts_2010.vcxproj  pvrlib_libhts_2010.vcxproj
lib/tinyxml2/tinyxml2/: tinyxml2.vcxproj
project/VS2010Express/: xbmc-pvr-addons.sln
project/VS2010Express/platform/: platform.vcxproj
project/VS2010Express/tinyxml/: tinyxml.vcxproj
project/VS2013Express/: xbmc-pvr-addons.sln
scripts/: copy_pvr_addon.bat
(+19 files in other folders)
